--- a/app/views/shared/_projects.html.haml
+++ b/app/views/shared/_projects.html.haml
@@ -16,5 +16,5 @@
             %i.icon-list-alt
             = link_to 'Tasks lists', project_task_lists_path(project)
             %i.icon-user
-            = link_to 'Peoples', users_project_url(project)
+            = link_to 'Users', project_users_path(project)
 
