--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,7 +1,9 @@
 - if signed_in?
+  - @title = "Todo list"
   = render 'shared/error_messages'
   = render 'shared/projects_task_lists'
 - else
+  - @title = "Todo list sign up"
   .row.title
     %h2
       Todo list
