--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,4 @@
-!!! 5
+!!!5
 %html
   %head
     %title
@@ -6,6 +6,7 @@
     = csrf_meta_tag
     = render 'layouts/stylesheets'
     = javascript_include_tag 'application'
+    = csrf_meta_tags
   %body
     .container
       = render 'layouts/header'
@@ -14,5 +15,8 @@
           - flash.each do |key, value|
             = content_tag :div, value, :id => "flash_#{key}" if value.is_a?(String)
       = yield
+      - if content_for? :javascript
+        %script{:type => "text/javascript"}
+          = yield :javascript
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
