view for projects update

--- a/app/assets/javascripts/backbone/templates/projects/project.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/projects/project.jst.ejs
@@ -14,9 +14,9 @@
             <i class="icon-remove"></i>
             <a href="#/<%= id %>/destroy" class="destroy">Destroy</a>
             <i class="icon-list-alt"></i>
-            <a href="#<%= id %>/task_lists">Task lists</a>
+            <a href="#/<%= id %>/task_lists">Task lists</a>
             <i class="icon-user"></i>
-            <a href="#<%= id %>/users">Users</a>
+            <a href="#/<%= id %>/users">Users</a>
         </div>
     </div>
 </div>
