--- a/app/assets/javascripts/backbone/templates/projects/edit.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/projects/edit.jst.ejs
@@ -1,9 +1,19 @@
-<h1>Edit project</h1>
+<div class="row">
+    <div class="span6 offset3">
+        <h2>Editing project</h2>
 
 <form id="edit-project" name="project">
-  <div class="actions">
-    <input type="submit" value="Update Project" />
-  </div>
+    <div class="actions">
+        <div class="field">
+            <label>Name:</label>
+            <input type="text" name="name" value="<%= name %>" />
+        </div>
+        <div class="field">
+            <label>Description:</label>
+            <textarea name="description"><%= description %></textarea>
+        </div>
+        <input type="submit" value="Update Project" class="btn-primary" />
+    </div>
 
 </form>
 
