--- a/app/assets/javascripts/backbone/templates/pages/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/pages/index.jst.ejs
@@ -3,4 +3,10 @@
   <div id="project">
   </div>
 </div>
+
+<h3>Task Lists</h3>
+<div class="row">
+  <div id="task_list">
+  </div>
+</div>
 <a href="/#/projects/new">New Project</a>
