--- a/app/assets/javascripts/backbone/templates/task_lists/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/task_lists/new.jst.ejs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="span6 offset3">
-    <h2>New project</h2>
-    <form id="new-project" name="project" class="well">
+    <h2>New task list</h2>
+    <form id="new-task_list" name="task_list" class="well">
       <div class="actions">
         <div class="field">
           <label>Name:</label>
@@ -11,10 +11,10 @@
           <label>Description:</label>
           <textarea name="description"></textarea>
         </div>
-        <input type="submit" value="Create Project" class="btn-primary" />
+        <input type="submit" value="Create task list" class="btn-primary" />
       </div>
     </form>
   </div>
 </div>
 
-<a href="/#/projects/index">Back</a>
+<a href="/#/task_lists/index">Back</a>
