--- a/app/assets/javascripts/backbone/templates/projects/edit.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/projects/edit.jst.ejs
@@ -1,20 +1,20 @@
 <div class="row">
-    <div class="span6 offset3">
-        <h2>Editing project</h2>
-
-<form id="edit-project" name="project">
-    <div class="actions">
+  <div class="span6 offset3">
+    <h2>Editing project</h2>
+    <form id="edit-project" name="project" class="well">
+      <div class="actions">
         <div class="field">
-            <label>Name:</label>
-            <input type="text" name="name" value="<%= name %>" />
+          <label>Name:</label>
+          <input type="text" name="name" value="<%= name %>" />
         </div>
         <div class="field">
-            <label>Description:</label>
-            <textarea name="description"><%= description %></textarea>
+          <label>Description:</label>
+          <textarea name="description"><%= description %></textarea>
         </div>
         <input type="submit" value="Update Project" class="btn-primary" />
-    </div>
+      </div>
+    </form>
+  </div>
+</div>
 
-</form>
-
-<a href="#/index">Back</a>
+<a href="/#/projects/index">Back</a>
