--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,10 +2,10 @@
   .span12
     .menu
       .btn-group.fl_left
-        = link_to "Home", root_path, class: 'btn'
+        = link_to "Home", '/#', class: 'btn'
         - if signed_in?
-          = link_to "Projects", projects_path, class: 'btn'
-          = link_to "Task lists", task_lists_path, class: 'btn'
+          = link_to "Projects", '/#/projects', class: 'btn'
+          = link_to "Task lists", '/#/task_lists', class: 'btn'
           = link_to "Profile",  edit_user_registration_path, class: 'btn'
           = link_to "Sign out", destroy_user_session_path, :method => :delete, class: 'btn'
         - else
@@ -19,12 +19,12 @@
           != '</a>'
           %ul.dropdown-menu
             %li
-              = link_to "Project", new_project_path
+              = link_to("Project", '/#/projects/new')
             %li
               - if !@project.nil? and controller.action_name != 'new' and controller.action_name != 'create'
-                = link_to("Task list", new_project_task_list_path(@project))
+                = link_to("Task list", '/#/projects/'+@project.id+'/task_lists/new' )
               - else
-                = link_to("Task list", new_task_list_path)
+                = link_to("Task list", '/#/task_lists/new')
             - if controller.controller_name == 'tasks'
               %li
-                = link_to "Task", new_task_list_task_path
+                = link_to "Task", '/#/task_lists/'+@task_list.id+'/task'
