--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,4 +1,4 @@
 #projects
 - content_for :javascript do
-   new TodoList.Routers.ProjectsRouter({projects: #{ @projects.to_json.html_safe } })
+   new TodoList.Routers.ProjectsRouter({projects: #{ @projects.to_json(include: :task_lists).html_safe } })
    Backbone.history.start()
