project task lists tasks collection

--- a/app/assets/javascripts/backbone/templates/pages/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/pages/index.jst.ejs
@@ -3,10 +3,12 @@
   <div id="project">
   </div>
 </div>
+<a href="/#/projects/new">New Project</a>
+<br />
 
-<h3>Task Lists</h3>
+<h3>Task lists out the project</h3>
 <div class="row">
   <div id="task_list">
   </div>
 </div>
-<a href="/#/projects/new">New Project</a>
+<a href="/#/task_lists/new">New Task list</a>
