--- a/app/assets/javascripts/backbone/templates/task_lists/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/task_lists/index.jst.ejs
@@ -1,6 +1,8 @@
-<h3>Task lists</h3>
+<h3 id="title">Task lists</h3>
 <div class="row">
   <div id="task_list">
   </div>
 </div>
-<a href="/#/task_lists/new">New Task List</a>
+<div id="task_list_new">
+
+</div>
