--- a/app/assets/javascripts/backbone/templates/task_lists/edit.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/task_lists/edit.jst.ejs
@@ -1,10 +1,20 @@
-<h1>Edit task_list</h1>
-
-<form id="edit-task_list" name="task_list">
-  <div class="actions">
-    <input type="submit" value="Update Task list" />
+<div class="row">
+  <div class="span6 offset3">
+    <h2>Editing task list</h2>
+    <form id="edit-task_list" name="task_list" class="well">
+      <div class="actions">
+        <div class="field">
+          <label>Name:</label>
+          <input type="text" name="name" value="<%= name %>" />
+        </div>
+        <div class="field">
+          <label>Description:</label>
+          <textarea name="description"><%= description %></textarea>
+        </div>
+        <input type="submit" value="Update Task list" class="btn-primary" />
+      </div>
+    </form>
   </div>
+</div>
 
-</form>
-
-<a href="#/index">Back</a>
+<div id="back"></div>
