--- a/app/assets/javascripts/backbone/templates/tasks/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/index.jst.ejs
@@ -1,16 +1,4 @@
-<h1>Listing tasks</h1>
-
-<table id="tasks-table">
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-</table>
-
-<br/>
-
-<a href="#/new">New Task</a>
+<div id="task_new"></div>
 
 <div class="row">
   <div class="span4 offset2">
@@ -37,25 +25,3 @@
     </thead>
   </div>
 </div>
-
-      - @tasks.each do |task|
-        = content_tag :tr, :class => "task_#{task.state == :'done' ? 'done' : 'not_done'}" do
-          %td
-            %i
-              = task.name
-          %td
-            = task.description
-          = content_tag :td, :class => "priority_#{ task.priority>4 ? 'high' : task.priority>2 ? 'middle' : 'low' }" do
-            = task.priority>4 ? 'High' : task.priority>2 ? 'Middle' : 'Low'
-            = '('+task.priority.to_s+')'
-          %td
-            =  !task.user.nil?? task.user.email : task.task_list.user.email
-          %td.operations
-            %i.icon-flag
-            = link_to "#{task.state.humanize}", change_state_task_list_task_url(@task_list, task)
-            %br
-            %i.icon-edit
-            = link_to 'Edit', edit_task_list_task_url(@task_list, task)
-            %br
-            %i.icon-remove
-            = link_to 'Destroy', [@task_list, task], confirm: 'Are you sure?', method: :delete
