--- a/app/views/relationships/index.html.haml
+++ b/app/views/relationships/index.html.haml
@@ -6,6 +6,7 @@
       = @project.name
   .span4.offset2
     = link_to "Invite other user", new_project_user_path, class: 'label label-success'
+    = link_to "Back", projects_path, class: 'label'
 .row
   .span8.offset2
     %table.table.table-striped
