--- a/app/views/relationships/new.html.haml
+++ b/app/views/relationships/new.html.haml
@@ -4,4 +4,5 @@
     =  form_tag(project_users_path, :method => :post, class: 'well') do
       = label_tag 'Enter email for invite: '
       = email_field_tag 'email'
-      = button_tag "Invite to project", class: 'btn'
+      = button_tag "Invite to project", class: 'btn btn-success'
+      = link_to "Back", project_users_path(@project), class: 'btn'
