--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -1,7 +1,7 @@
-- if @user.errors.any?
+- if current_user.errors.any?
   #error_explanation
     %b
-      = pluralize(@user.errors.count, "error")
+      = pluralize(current_user.errors.count, "error")
       prohibited this user from being saved:
     %p
       There were problems with the following fields:
