--- a/app/assets/javascripts/backbone/templates/pages/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/pages/index.jst.ejs
@@ -3,7 +3,7 @@
   <div id="project">
   </div>
 </div>
-<a href="/#/projects/new">New Project</a>
+<div class="nav"><a href="/#/projects/new">New Project</a></div>
 <br />
 
 <h3>Task lists out the project</h3>
@@ -11,4 +11,4 @@
   <div id="task_list">
   </div>
 </div>
-<a href="/#/task_lists/new">New Task list</a>
+<div class="nav"><a href="/#/task_lists/new">New Task list</a></div>
