--- a/app/assets/javascripts/backbone/templates/projects/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/projects/index.jst.ejs
@@ -3,4 +3,4 @@
   <div id="project">
   </div>
 </div>
-<a href="/#/projects/new">New Project</a>
+<div class="nav"><a href="/#/projects/new">New Project</a></div>
