--- a/app/assets/javascripts/backbone/templates/tasks/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/new.jst.ejs
@@ -11,10 +11,21 @@
           <label>Description:</label>
           <textarea name="description"></textarea>
         </div>
+        <div class="field">
+          <label>Priority:</label>
+          <select name="priority">
+            <option value="0">0(low)</option>
+            <option value="1">1(low)</option>
+            <option value="2">2(low)</option>
+            <option value="3">3(middle)</option>
+            <option value="4">4(middle)</option>
+            <option value="5">5(high)</option>
+            <option value="6">6(high)</option>
+          </select>
+        </div>
         <input type="submit" value="Create task" class="btn-primary" />
       </div>
     </form>
   </div>
 </div>
-
-<a href="/#/task_lists/index">Back</a>
+<div class="nav"><a href="/#/task_lists/index">Back</a></div>
