--- a/app/assets/javascripts/backbone/templates/projects/new.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/projects/new.jst.ejs
@@ -11,10 +11,9 @@
           <label>Description:</label>
           <textarea name="description"></textarea>
         </div>
-        <input type="submit" value="Create Project" class="btn-primary" />
+        <input type="submit" value="Create project" class="btn-primary" />
       </div>
     </form>
   </div>
 </div>
-
-<a href="/#/projects/index">Back</a>
+<div class="nav"><a href="/#/projects/index">Back</a></div>
