--- a/app/assets/javascripts/backbone/templates/task_lists/edit.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/task_lists/edit.jst.ejs
@@ -11,10 +11,10 @@
           <label>Description:</label>
           <textarea name="description"><%= description %></textarea>
         </div>
-        <input type="submit" value="Update Task list" class="btn-primary" />
+        <input type="submit" value="Update task list" class="btn-primary" />
       </div>
     </form>
   </div>
 </div>
 
-<div id="back"></div>
+<div id="back" class="nav"></div>
