--- a/app/assets/javascripts/backbone/templates/tasks/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/tasks/index.jst.ejs
@@ -1,8 +1,8 @@
-<div id="task_new"></div>
+<div id="task_new" class="nav"></div>
 
 <div class="row">
   <div class="span4 offset2">
-    <h3 id="task_h">All tasks of</h3>
+    <h3 id="title">All tasks</h3>
   </div>
   <div class="span4 task_menu">
 
@@ -16,7 +16,6 @@
           <th>Name</th>
           <th>Description</th>
           <th>Priority</th>
-          <th>Performance</th>
           <th>Operations</th>
         </tr>
       </thead>
